--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+body {
+    margin-inline: 100px;
+}
+
+.logo {
+    margin-top: 35px;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -16,17 +24,18 @@ form {
 
 }
 
-form .fas{
+form .fas {
     font-size: 35px;
     margin-right: 10px;
 }
 
-input{
+input::placeholder {
     color: black;
     opacity: 25%;
-    font-family: 'Lato', sans-serif;
-    width: 100%;
-    height: 100%;
+}
+
+:focus-visible {
+    outline: none;
 }
 
 input {
@@ -37,9 +46,166 @@ input {
     font-weight: bold;
     font-size: 20px;
     border: none;
+    font-family: 'Lato', sans-serif;
+    width: 100%;
+    height: 100%;
 }
 
-main{
+main {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#recipes {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.card {
+    width: 475px;
+    height: 435px;
+    background-color: #E7E7E7;
+    margin: 20px;
+    border-radius: 10px;
+}
+
+.card .title {
+    display: flex;
+    font-size: 18px;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.time {
+    font-weight: bold;
+}
+
+.card img {
+    height: 222px;
+    width: 475px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.card .contient {
+    display: flex;
+    height: 207px;
+    margin-inline: 20px;
+    justify-content: space-between;
+    font-size: 12px;
+}
+
+.card ul, .card .description {
+    width: 190px;
+    overflow: hidden;
+    padding-left: 5px;
+    height: 100px;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    font-size: 12px;
+}
+
+.card ul {
+    font-family: 'Lato', sans-serif;
+}
+
+.card .description {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
+li {
+    list-style-type: none;
+    white-space: nowrap;
+    overflow: visible;
+}
+
+#filters {
+    display: flex;
+    justify-content: flex-start;
+    width: 95%;
+}
+
+.dropdown-menu {
+    top: auto;
+    left: auto;
+}
+
+.open .btn {
+    width: 667px;
+}
+
+.btn {
+
+    font-size: 18px;
+    Width: 170px;
+    height: 69px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#menu1, .open .blue, #filters .blue {
+    background-color: #3282F7;
+    border: #3282F7;
+}
+
+#menu2, .open .green, #filters .green {
+    background-color: #68D9A4;
+    border: #68D9A4;
+}
+
+#menu3, .open .red, #filters .red {
+    background-color: #ED6454;
+    border: #ED6454;
+}
+
+.open .dropdown-menu {
+    font-family: 'Lato', sans-serif;
+    display: flex;
+    color: white;
+    padding: 0.5rem;
+    box-shadow: none;
+    flex-wrap: wrap;
+    width: 667px;
+    max-height: 320px;
+    overflow: hidden;
+    writing-mode: vertical-lr;
+    margin: -0.5rem 0 0 0;
+}
+
+.dropdown-item {
+    width: 33%;
+    writing-mode: horizontal-tb;
+    font-size: 18px;
+    padding: 0.25rem 2.5rem;
+    white-space: nowrap;
+    font-weight: lighter;
+}
+
+.dropdown-parent #form, .open #menu1, .open #menu2, .open #menu3 {
+    display: none;
+}
+
+.open #form {
+    display: flex;
+}
+
+.open #form form {
+    background-color: transparent;
+    border: none;
+}
+
+.open #form form input::placeholder {
+    color:white;
+    opacity: 50%;
+    font-weight: 400;
+}
+
+#form span {
+    font-size: 18px;
 }
